--- a/dockerfiles/develop-env/ubuntu/22.04/Dockerfile
+++ b/dockerfiles/develop-env/ubuntu/22.04/Dockerfile
@@ -188,14 +188,16 @@ RUN versions='3.12.4 3.19.8 3.20.6 3.25.3 3.26.5 3.27.6' && \
 # 安装gcc多版本 参考文档：https://blog.csdn.net/RBPicsdn/article/details/79565383
 # 源码地址：https://mirrors.ustc.edu.cn/gnu/gcc/
 # 如果执行./contrib/download_prerequisites脚本下载依赖失败，那么只能手动下载之后放在工程的根目录下面
+# 依赖镜像源：https://mirrors.tuna.tsinghua.edu.cn/gnu/gmp/gmp-6.2.1.tar.bz2  或者  http://mirror.linux-ia64.org/gnu/gmp/gmp-6.2.1.tar.bz2
 # versions='3.4.6 4.5.0 4.9.4 5.5.0 6.5.0 7.5.0 8.5.0 9.5.0 10.5.0 11.4.0 12.3.0 13.2.0'
-RUN wget https://mirrors.ustc.edu.cn/gnu/gcc/gcc-7.5.0/gcc-7.5.0.tar.gz && tar -xf gcc-7.5.0.tar.gz
+RUN wget https://mirrors.ustc.edu.cn/gnu/gcc/gcc-5.5.0/gcc-5.5.0.tar.gz && tar -xf gcc-5.5.0.tar.gz
 RUN tree -L 2
-RUN cd gcc-7.5.0 && sed -i 's@ftp://gcc.gnu.org/pub@http://mirror.linux-ia64.org/gnu@g' ./contrib/download_prerequisites && \
-    ./contrib/download_prerequisites && mkdir build-gcc-7.5.0 && cd build-gcc-7.5.0 && \
-    ../configure --prefix=/usr/local/gcc7 --enable-checking=release --enable-languages=c,c++ --disable-multilib && \
-    make -j16 && make install
-
+RUN cd gcc-5.5.0 && sed -i 's@ftp://gcc.gnu.org/pub@http://mirror.linux-ia64.org/gnu@g' ./contrib/download_prerequisites && \
+    ./contrib/download_prerequisites && mkdir build-gcc-5.5.0 && cd build-gcc-5.5.0 && mkdir /usr/local/gcc5 && \
+    ../configure --prefix=/usr/local/gcc5 --enable-checking=release --enable-languages=c,c++ --disable-multilib && \
+    make -j$(nproc) && make install
+# RUN libtool --finish /usr/local/gcc4/libexec/gcc/x86_64-pc-linux-gnu/4.5.0
+RUN ls -ll /usr/local/gcc5
 # RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 60 \
 #                          --slave /usr/bin/g++ g++ /usr/bin/g++-7 \
 #                          --slave /usr/bin/gcov gcov /usr/bin/gcov-7 \
